Policy's/test-deny-pod-name.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-pod-name
  annotations:
    policies.kyverno.io/title: restrict-pod-name
    policies.kyverno.io/category: Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: pod
    policies.kyverno.io/description: >-
      A Kubernetes Service of type NodePort uses a host port to receive traffic from
      any source. A NetworkPolicy cannot be used to control traffic to host ports.
      Although NodePort Services can be useful, their use must be limited to Services
      with additional upstream security checks. This policy validates that any new Services
      do not use the `NodePort` type.
spec:
  validationFailureAction: enforce
  background: true
  rules:
    - name: restrict-pod-name
      match:
        any:
          - resources:
              kinds:
                - Pod
      validate:
        message: "Pods with a name starting with test are not allowed"
        pattern:
          spec:
            container:
              - name: "!test"
